--- a/AMPS/res/values/color.xml
+++ b/AMPS/res/values/color.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="lightgrey">#EAEAEA</color>
     <color name="mediumgrey">#DDDDDD</color>
+    <color name="white">#FFFFFF</color>
     
 </resources>
