--- a/AMPS/res/layout/activity_project_list.xml
+++ b/AMPS/res/layout/activity_project_list.xml
@@ -7,12 +7,9 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:paddingBottom="@dimen/activity_vertical_margin" >
 
-        <TableRow
+        <!-- <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
@@ -20,28 +17,16 @@
                 android:id="@+id/textViewName"
                 android:layout_width="0px"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="1"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
                 android:text="@string/name" />
-
-            <TextView
-                android:id="@+id/textViewStatus"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-                android:text="@string/status" />
-
-            <TextView
-                android:id="@+id/textViewDetails"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2" />
-        </TableRow>
+        </TableRow> -->
 
         <TableLayout
             android:id="@+id/tableRowProjectList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="@dimen/activity_vertical_margin" >
+            android:layout_height="match_parent">
         </TableLayout>
     </TableLayout>
 
